[package]
name = "peer_protocol_contracts"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "peer_protocol_contracts"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
pyth-sdk-solana = "0.10.1"
anchor-spl = "0.29.0"
solana-program = "1.16.24"
